# otus_python_professional

./: .gitignore  .pre-commit-config.yaml  mypy.ini
AmazonResponseClassifier/: pyproject.toml
AmazonResponseClassifier/data/: ._train.csv
AmazonResponseClassifier/dmia/classifiers/: logistic_regression.py
AmazonResponseClassifier/test_dmia/: test_lr.py
BlogSystem/: Makefile  README.md  db.sqlite3  pyproject.toml  pytest.ini
BlogSystem/poll_app/: db.sqlite3  init_seed_polls.py  init_seed_users.py  manage.py  secrets.json  wsgi.py
BlogSystem/poll_app/api/: urls.py  views.py
BlogSystem/poll_app/core/: admin.py  apps.py  models.py
BlogSystem/poll_app/core/management/commands/: seed_users.py
BlogSystem/poll_app/settings/: base.py  dev.py
BlogSystem/poll_app/templates/polls/: detail.html  index.html  results.html  statistics.html
BlogSystem/poll_app/templates/registration/: logged_out.html  login.html
BlogSystem/poll_tests/: tests.py
LogAnalyser/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  run_check.bat
LogAnalyser/.github/workflows/: ci.yml
LogAnalyser/src/ru/otus/loganalyser/: config.json  log_analyser.py
LogAnalyser/src/rus/otus/loganalyser/: log_analyser.py
LogAnalyser/tests/ru/otus/loganalyser/: nginx_log.positive.txt  test_analyser.py
LogAnalyser/tests/rus/otus/loganalyser/: test_analyser.py
PythonTypeChallenges/: pyproject.toml
PythonTypeChallenges/.github/workflows/: typing.yml
PythonTypeChallenges/src/ru/otus/pythontypechallenges/: advanced.py  basic.py  intermediate.py
ScoringAPI/: README.MD  pyproject.toml
ScoringAPI/src/ru/otus/scoring/: api.py  gpt_test.py  scoring.py  store.py
ScoringAPI/tests/: test_api.py
ScoringAPI/tests/integration/: test_store.py
ScoringAPI/tests/integration/fixtures/: test_basic.json
ScoringAPI/tests/unit/: test_api.py  test_fields.py
VarianceForecaster/: Makefile  README.md  pyproject.toml
VarianceForecaster/resource/: tmp_db.db
VarianceForecaster/resource/templates/: info.html  login.html
VarianceForecaster/vf_app/: dependencies.py
VarianceForecaster/vf_app/api/: auth.py  endpoints.py
VarianceForecaster/vf_app/core/: services.py
VarianceForecaster/vf_app/errors/: errors.py
VarianceForecaster/vf_app/model/: model.py
VarianceForecaster/vf_app/storage/: init_user.py  persistence.py
VarianceForecaster/vf_tests/: model.py  test_api.py  test_config.py
WarhouseDDD/: main.py  mypy.ini  pyproject.toml  warehouse.db
WarhouseDDD/domain/: exceptions.py  models.py  repositories.py  services.py  unit_of_work.py
WarhouseDDD/infrastructure/: orm.py  repositories.py  unit_of_work.py
WarhouseDDD/infrastructure/api/: http.py  schemas.py
WarhouseDDD/tests/test_domain/: test_services.py
WarhouseDDD/tests/test_infrastructure/: test_http.py  test_orm.py  warehouse.db
WebServer/: .env  Dockerfile  README.md  http-test-suite_result.txt
WebServer/deployment/: docker-compose.yml
WebServer/scripts/: run_server.py
WebServer/tests/: test_server.py
