[project]
name = "log-analyser"
version = "0.1.0"
description = "first homework"
authors = [
    {name = "Дмитрий Цитман",email = "dimazzik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "structlog (>=23.1.0,<24.0.0)",
]

[tool.poetry.dependencies]
python = ">=3.12"
click  = "^8.1"
structlog = "^23.1.0"

[tool.poetry]
packages = [{include = "ru", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
black = "^25.1.0"
ruff = "^0.11.6"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
