[project]
name = "pythontypechallenges"
version = "0.1.0"
description = ""
authors = [
    {name = "Дмитрий Цитман",email = "dimazzik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

