[project]
name = "scoringapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Дмитрий Цитман",email = "dimazzik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["classifiers"]
dependencies = [
]

[tool.poetry]
packages = [{ include = "ru", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
